kubernetes/balance-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balance-service
  labels:
    app: balance-service
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: balance-service
